Added some styles and js

--- a/src/Sales/SalesBundle/Resources/views/invoice/new.html.twig
+++ b/src/Sales/SalesBundle/Resources/views/invoice/new.html.twig
@@ -58,18 +58,13 @@
 
 {% block javascripts %}
 {{ parent() }}
-    <script src="{{ asset('bundles/js/jquery-ui.min.js') }}"></script>
-    <script src="{{ asset('bundles/js/script_create.js') }}"></script>
     <script>
         $(function() {
-            var invoiceDate = $( "#invoice_date" );
+            var invoiceDate = $("#invoice_date");
             invoiceDate.each(function(){
                     this.type="text";
                 });
-            invoiceDate.datepicker({
-                dateFormat: 'yy-mm-dd',
-                minDate: 0
-            });
+            invoiceDate.datepicker();
             });
     </script>
 {% endblock %}
