--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <title>Sales Invoice {% block title %} | Home {% endblock %}</title>
         {% block stylesheets %}
             <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('bundles/css/datepicker.css') }}" />            
             <link rel="stylesheet" href="{{ asset('bundles/css/styles.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -14,12 +15,12 @@
     <body>
         <div class="container">
             {% block body %}
-
-
             {% endblock %}
         </div>
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+            <script src="{{ asset('bundles/js/datepicker.min.js') }}"></script>
+            <script src="{{ asset('bundles/js/scripts.js') }}"></script>
         {% endblock %}
     </body>
 </html>
