Removed some console errors

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,18 @@
             <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
             <script src="{{ asset('bundles/js/datepicker.min.js') }}"></script>
             <script src="{{ asset('bundles/js/scripts.js') }}"></script>
+            <script>
+                $(function() {
+                    var invoiceDate = $( "#invoice_date" );
+                    invoiceDate.each(function(){
+                        this.type="text";
+                    });
+                    invoiceDate.datepicker({
+                        dateFormat: 'yy-mm-dd',
+                        minDate: 0
+                    });
+                });
+            </script>
         {% endblock %}
     </body>
 </html>
