--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,10 +26,10 @@
                     var invoiceDate = $( "#invoice_date" );
                     invoiceDate.each(function(){
                         this.type="text";
+                        this.placeholder = "Date (yyy-mm-dd)";
                     });
                     invoiceDate.datepicker({
-                        dateFormat: 'yy-mm-dd',
-                        minDate: 0
+                        format: 'yyyy-mm-dd'
                     });
                 });
             </script>
