--- a/src/Sales/SalesBundle/Resources/views/invoice/edit.html.twig
+++ b/src/Sales/SalesBundle/Resources/views/invoice/edit.html.twig
@@ -1,64 +1,48 @@
 {% extends 'base.html.twig' %}
-{% block title %} | Edit Invoice {% endblock %}
+{% block title %} | {{ invoice.id ? "Edit" : "New " }} Invoice {% endblock %}
 {% block body %}
-    <h1>Invoice edit</h1>
+    <h1>{{ invoice.id ? "Edit" : "New " }} Invoice</h1>
+    {{ form_start(form) }}
+    <div class="form-group">
+        {{ form_row(form.address, {'attr': {'class': 'form-control', 'placeholder' : 'Address'}}) }}
+    </div>
 
-    {{ form_start(edit_form) }}
-        <div class="form-group">
-            {{ form_row(edit_form.number, {'attr': {'class': 'form-control', 'placeholder' : 'Number'}}) }}
-        </div>
-        <div class="form-group">
-            {{ form_row(edit_form.address, {'attr': {'class': 'form-control', 'placeholder' : 'Address'}}) }}
-        </div>
+    <div class="form-group">
+        {{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder' : 'Email'}}) }}
+    </div>
 
-        <div class="form-group">
-            {{ form_row(edit_form.email, {'attr': {'class': 'form-control', 'placeholder' : 'Email'}}) }}
-        </div>
+    <div class="form-group">
+        {{ form_row(form.date, {'attr': {'class': 'form-control'}}) }}
+    </div>
 
-        <div class="form-group">
-            {{ form_row(edit_form.date, {'attr': {'class': 'form-control'}}) }}
-        </div>
-
-        <div id="addDiv" class="form-group row edit-form">
-            {% set j = 0 %}
-            {% for product in edit_form.products %}
-                <div>
-                    <div class="col-xs-12 col-md-8">
-                        {{ form_row(product.description, {'attr': {'class': 'form-control', 'placeholder' : 'Description'}}) }}
-                    </div>
-
-                    <div class="col-xs-6 col-md-4">
-                        {{ form_row(product.amount, {'attr': {'class': 'form-control', 'placeholder' : 'Amount'}}) }}
-                    </div>
+    <div id="products" class="row edit-form">
+        {% set amount = 0 %}
+        {% for product in form.products %}
+            <div class="form-group">
+                <div class="col-xs-12 col-md-8 description">
+                    {{ form_row(product.description, {'attr': {'class': 'form-control', 'placeholder' : 'Description'}}) }}
                 </div>
+                <div class="col-xs-6 col-md-3">
+                    {{ form_row(product.amount, {'attr': {'class': 'form-control amount', 'placeholder' : 'Amount'}}) }}
+                </div>
+                <a class="col-xs-6 col-md-1 btn btn-info btn-danger removeProduct">X</a>
+            </div>
+            {% set amount = (amount + product.amount) %}
+        {% endfor %}
+    </div>
 
-                <div class="clearfix"></div>
-                <hr />
-            {% endfor %}
-
+    <div class="clearfix"></div>
+    Total : <span>$</span><span id="total">{{ amount }}</span>
+    <div class="row">
+        <div class="form-group col-xs-4">
+            <input type="submit" value="Save" class="btn btn-info btn-block"/>
         </div>
-
-
-        <div class="clearfix"></div>
-
-        <div class="row">
-
-            <div class="form-group col-xs-4">
-                <input type="submit" value="Save" class="btn btn-info btn-block" />
-            </div>
-
-
-            <div class="col-xs-4">
-                <a href="{{ path('invoice_index') }}" class="btn btn-block btn-info">Back to Invoice List</a>
-            </div>
-
-            {{ form_row(edit_form.products) }}
-            {{ form_end(edit_form) }}
-
-            <div class="col-xs-4">
-                {{ form_start(delete_form) }}
-                    <input type="Save" value="Delete" class="btn btn-block btn-info">
-                {{ form_end(delete_form) }}
-            </div>
+        <div class="col-xs-4">
+            <a href="{{ path('invoice_index') }}" class="btn btn-block btn-info">Back to Invoice List</a>
         </div>
+        <div class="form-group col-xs-4">
+            <input type="button" value="Add Products" id="addProduct" class="btn btn-info btn-block"/>
+        </div>
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
