--- a/src/Sales/SalesBundle/Resources/views/invoice/pdf.html.twig
+++ b/src/Sales/SalesBundle/Resources/views/invoice/pdf.html.twig
@@ -38,14 +38,19 @@
                 padding: 0;
             }
             table li{
-                display: flex;
-                justify-content: space-between;
+                display: block;
                 padding: 2px 0;
             }
             table li.total{
                 border-top: 1px solid;
                 margin-top: 10px;
                 padding-top: 5px;
+            }
+            table li div{
+                display: inline-block;
+            }
+            table li div:last-child{
+                float: right;
             }
         </style>
     </head>
