--- a/src/Sales/SalesBundle/Resources/views/invoice/index.html.twig
+++ b/src/Sales/SalesBundle/Resources/views/invoice/index.html.twig
@@ -17,7 +17,7 @@
             <tr>
                 <td><a href="{{ path('invoice_show', { 'id': invoice.id }) }}">{{ invoice.id }}</a></td>
                 <td>{{ invoice.address }}</td>
-                <td>{% if invoice.date %}{{ invoice.date|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if invoice.date %}{{ invoice.date|date('d-m-Y') }}{% endif %}</td>
                 <td>
                     <a href="{{ path('invoice_show', { 'id': invoice.id }) }}">{{ invoice.products.count }} Products</a>
                 </td>
